--- a/res/layout/filechooser_gridview_item.xml
+++ b/res/layout/filechooser_gridview_item.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/imgFileIcon"
         android:layout_centerHorizontal="true"
-        android:gravity="center">"
+        android:gravity="center">
     </TextView>
 
 </RelativeLayout>
