--- a/res/layout/read_train.xml
+++ b/res/layout/read_train.xml
@@ -1,118 +1,109 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-	android:background="@drawable/background"
-    >
+    android:background="@drawable/background"
+    android:orientation="vertical" >
 
-
-    <LinearLayout 
-        android:orientation="vertical"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        >
-      <LinearLayout 
-        android:orientation="horizontal"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="6"
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/num"
+                android:layout_width="240px"
+                android:layout_height="180px"
+                android:digits="0123456789"
+                android:hint="num"
+                android:maxLength="1"
+                android:singleLine="true"
+                android:textSize="20pt" />
+
+            <TextView
+                android:id="@+id/numdis"
+                android:layout_width="50px"
+                android:layout_height="50px"
+                android:text="0" />
+
+            <EditText
+                android:id="@+id/px"
+                android:layout_width="240px"
+                android:layout_height="180px"
+                android:digits="0123456789"
+                android:hint="px"
+                android:maxLength="4"
+                android:singleLine="true"
+                android:text="500" />
+
+            <EditText
+                android:id="@+id/py"
+                android:layout_width="240px"
+                android:layout_height="180px"
+                android:digits="0123456789"
+                android:hint="py"
+                android:maxLength="4"
+                android:singleLine="true"
+                android:text="500" />
+
+            <EditText
+                android:id="@+id/distance"
+                android:layout_width="240px"
+                android:layout_height="180px"
+                android:digits="0123456789"
+                android:hint="distance"
+                android:maxLength="4"
+                android:singleLine="true"
+                android:text="2000" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/draw"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="6"
-        >
-        <EditText  android:layout_height="180px"
-            	   android:layout_width="240px"
-            	   android:hint="num"
-            	   android:id="@+id/num"
-            	   android:digits="0123456789"
-            	   android:textSize="20pt"
-            	   android:singleLine="true"
-            	   android:maxLength="1"
-            />
-		<TextView 
-		    android:layout_height="50px"
-            android:layout_width="50px"
-            android:id="@+id/numdis"
-            android:text="0"
-			    />
-		<EditText  android:layout_height="180px"
-            	   android:layout_width="240px"
-            	   android:hint="px"
-            	   android:id="@+id/px"
-            	   android:singleLine="true"
-            	   android:maxLength="4"
-            	   android:digits="0123456789"
-            	    android:text="500"
-            />
-		<EditText  android:layout_height="180px"
-            	   android:layout_width="240px"
-            	   android:hint="py"
-            	   android:id="@+id/py"
-            	   android:singleLine="true"
-            	   android:maxLength="4"
-            	   android:digits="0123456789"
-            	   android:text="500"
-            />
-		<EditText  android:layout_height="180px"
-            	   android:layout_width="240px"
-            	   android:hint="distance"
-            	   android:id="@+id/distance"
-            	   android:singleLine="true"
-            	   android:maxLength="4"
-            	   android:digits="0123456789"
-            	     android:text="2000"
-            />
-
-			 </LinearLayout>
-	 <LinearLayout 
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        >
-	   <ImageView 
-    	android:id="@+id/draw"
-    	android:layout_width="fill_parent"
-    	android:layout_height="fill_parent"
-  				  />
-	  	</LinearLayout>
-	 </LinearLayout>
-	 <LinearLayout 
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-             android:layout_weight="6"
-        >
-
+        android:orientation="horizontal" >
 
         <Button
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:id="@+id/writecon"
-	    android:textSize="8dip"
-	   	android:background="@drawable/button1"
-	    />
-
-
+            android:id="@+id/writecon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button1"
+            android:textSize="8dip" />
 
         <Button
-       android:id="@+id/draw"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:textSize="8dip"
-	    android:onClick="onDraw"
-        android:text="draw" 
-	    />
-      <Button
-       android:id="@+id/onClick_delete"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:textSize="8dip"
-	    android:onClick="onClick_delete"
-        android:text="onClick_delete" 
-	    />
+            android:id="@+id/draw1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onDraw"
+            android:text="draw"
+            android:textSize="8dip" />
 
-     
-           
-         </LinearLayout>
-         
+        <Button
+            android:id="@+id/onClick_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick_delete"
+            android:text="onClick_delete"
+            android:textSize="8dip" />
+    </LinearLayout>
 
 </LinearLayout>
